--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <section class="main-pict">
             <figure class="main-pict1 bg-[#AAA69D]">
-                <img src="assets/images/main1.png" alt=main1.png">
+                <img src="assets/images/main2.png" alt=main2.png">
             </figure>
         </section>
         <section class="main-text bg-[#F7F1E3] flex items-start flex-col justify-center gap-16">
@@ -34,7 +34,7 @@
             <div class="main-text1 flex gap-80">
                 <a href="#about-me">About me</a>
                 <div class="cv-color">
-                    <a href="assets/cv_ahmadlutfifarizi.pdf" target="_blank">Download CV</a>
+                    <a href="assets/ahmadlutfifarizi_cv.pdf" target="_blank">Download CV</a>
                 </div>
             </div>
         </section>
@@ -90,20 +90,58 @@
         <section class="edu-main2 flex justify-end items-center pt-[3rem] pb-[5rem]">
             <section class="edu-main2-pict">
                 <figure class="pict-e2">
-                    <img src="assets/images/sakura.png" alt="sakura.png">
+                    <img src="assets/images/ruangguru.png" alt="ruangguru.png">
                 </figure>
             </section>
             <section class="edu-main2-text bg-[#AAA69D] mr-[10rem] w-[25rem] rounded-md p-[2.3rem]">
-                <h1>Sakura Senior High School</h1>
-                <h2>Mathematics and Sciences at SMAN 1 Kuta Utara Cumulative score: 8.6/10</h2>
+                <h1>Ruangguru CAMP</h1>
+                <h2>Back-End Engineering Cumulative GPA: : 3.9/4.0</h2>
             </section>
         </section>
     </div>
     <div class="main-content4 bg-[#D1CCC0] mb-0 pb-12" id="portofolio">
         <section class="mc2-head flex justify-center items-center font-bold">
-            <h1>Portofolio</h1>
+            <h1>Project</h1>
         </section>
         <center>
+            <section class="main-project1 flex justify-center items-center w-[80%] bg-[#D9D9D9] gap-[5px] mt-5">
+                <section class="mp1-pict">
+                    <a class="a-p-pict1" href="https://github.com/alfarizi28/kanban-app-project" target="_blank">                      
+                        <section class="p-pict1">
+                            <figure class="tcow-pict">
+                                <img src="assets/images/kanban.png" alt="">
+                            </figure>
+                        </section>
+                    </a>
+                </section>
+                <section class="mp1-text1 bg-[#AAA69D] mr-[30px]">
+                    <article class="p-text1">
+                        <p>
+                            Kanban App adalah sebuah website kanban, website kanban adalah sebuah website untuk mengatur kegiatan.
+                            Website ini menggunakan bahasa pemrograman Go dan basis data PostgreSQL
+                        </p>
+                    </article>
+                </section>
+            </section>
+            <section class="main-project2 flex justify-center items-center w-[80%] bg-[#D9D9D9] gap-[5px] mt-5">
+                <section class="mp1-text2 bg-[#AAA69D] ml-[30px]">
+                    <article class="p-text2">
+                        <p>
+                            Cashier App merupakan sebuah website kasir sederhana. pada website ini memiliki fitur-fitur utama kasir.
+                            Website ini menggunakan bahasa Pemrograman Go dan basis data PostgreSQL
+                        </p>
+                    </article>
+                </section>
+                <section class="mp2-pict">
+                    <a class="a-p-pict2" href="https://github.com/alfarizi28/cashier-app--db-final-project" target="_blank">
+                        <section class="p-pict2">
+                            <figure class="g4n-pict">
+                                <img src="assets/images/cashier.png" alt="">
+                            </figure>
+                        </section>
+                    </a>
+                </section>
+            </section>
             <section class="main-project1 flex justify-center items-center w-[80%] bg-[#D9D9D9] gap-[5px] mt-5">
                 <section class="mp1-pict">
                     <a class="a-p-pict1" href="https://github.com/alfarizi28/TCow" target="_blank">                      
@@ -146,18 +184,6 @@
             </section>
         </center>
         <div class="main-project-grid mb-0">
-            <div class="p-main-content">
-                <a class="a-project" href="https://www.figma.com/file/cHIoMT0IyddgvkyXRLtrBs/Mockup-PBM?node-id=439%3A121" target="_blank">     
-                    <div class="p-content-pict">
-                        <figure class="p-pict">
-                            <img src="assets/images/figma.png" alt="logo_figma.jpg">
-                        </figure>
-                    </div>
-                    <div class="p-content-text">
-                        <h2>G4N Design</h2>
-                    </div>
-                </a>
-            </div>
             <div class="p-main-content">
                 <a class="a-project" href="https://github.com/alfarizi28/katalog" target="_blank">     
                     <div class="p-content-pict1">
@@ -207,62 +233,26 @@
                 </a>
             </div>
             <div class="p-main-content">
-                <a class="a-project" href="https://www.youtube.com/watch?v=RCFhIrJl5Go&t=210s" target="_blank">     
-                    <div class="p-content-pict2">
-                        <figure class="p-pict2">
-                            <img src="assets/images/yt.png" alt="logo_figma.jpg">
-                        </figure>
-                    </div>
-                    <div class="p-content-text">
-                        <h2>Games GTA V 1</h2>
-                    </div>
-                </a>
-            </div>
-            <div class="p-main-content">
-                <a class="a-project" href="https://www.figma.com/file/vEFioeyaEvsoXz2Os0nx7a/project-MicroJ?node-id=0%3A1" target="_blank">     
+                <a class="a-project" href="https://www.figma.com/file/cHIoMT0IyddgvkyXRLtrBs/Mockup-PBM?node-id=439%3A121" target="_blank">     
                     <div class="p-content-pict">
                         <figure class="p-pict">
                             <img src="assets/images/figma.png" alt="logo_figma.jpg">
                         </figure>
                     </div>
                     <div class="p-content-text">
-                        <h2>MicroJ Design</h2>
+                        <h2>G4N Design</h2>
                     </div>
                 </a>
             </div>
             <div class="p-main-content">
-                <a class="a-project" href="https://www.figma.com/file/f1XJaoj055GsVSFk32Vvf4/ISFEST-PR?node-id=0%3A1" target="_blank">     
+                <a class="a-project" href="https://www.figma.com/file/BFhMJFiX1DSeCxQGlPnoI2/DAQ?node-id=0%3A1&t=nbwAR9M7GN8so8SG-1" target="_blank">     
                     <div class="p-content-pict">
                         <figure class="p-pict">
                             <img src="assets/images/figma.png" alt="logo_figma.jpg">
                         </figure>
                     </div>
                     <div class="p-content-text">
-                        <h2>ISFEST Design</h2>
-                    </div>
-                </a>
-            </div>
-            <div class="p-main-content">
-                <a class="a-project" href="https://www.figma.com/file/9Zm0KHDTrUaJp53DSMARGM/Gemastik-File?node-id=0%3A1" target="_blank">     
-                    <div class="p-content-pict">
-                        <figure class="p-pict">
-                            <img src="assets/images/figma.png" alt="logo_figma.jpg">
-                        </figure>
-                    </div>
-                    <div class="p-content-text">
-                        <h2>Duta For U Design</h2>
-                    </div>
-                </a>
-            </div>
-            <div class="p-main-content">
-                <a class="a-project" href="https://www.youtube.com/watch?v=QhX-JwJLgec&t=15s" target="_blank">     
-                    <div class="p-content-pict2">
-                        <figure class="p-pict2">
-                            <img src="assets/images/yt.png" alt="logo_figma.jpg">
-                        </figure>
-                    </div>
-                    <div class="p-content-text">
-                        <h2>Games GTA V 2</h2>
+                        <h2>Muslimpedia</h2>
                     </div>
                 </a>
             </div>
